fix wrap

--- a/src/components/simulator/simulator.css
+++ b/src/components/simulator/simulator.css
@@ -6,7 +6,7 @@
     justify-content: flex-start;
     align-items: center;
     overflow-y: scroll;
-    overflow-x: hidden;
+    display: block;
 }
 .container::-webkit-scrollbar {/*滚动条整体样式*/
     width: 4px;     /*高宽分别对应横竖滚动条的尺寸*/
